--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "swiper": "^6.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
