--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
     "swiper": "^6.7.0"
