--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.35.1",
-    "swiper": "^6.7.0"
+    "swiper": "^6.7.0",
+    "tiny-skeleton-loader-react": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
